tests/errors/syn_switch4.java
public class syn_switch4{
public static void main(String[] args){
 switch ( args.length { }
}
}